--- a/public/index.html
+++ b/public/index.html
@@ -1,162 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Jerry Bot Panel</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-<style>
-*{box-sizing:border-box;}
-html,body{height:100%;margin:0;font-family:Poppins,system-ui,-apple-system,"Segoe UI",Roboto,Arial;background:#ffd6e0;overflow:auto;}
-body{display:flex;justify-content:center;align-items:center;padding:16px;position:relative;}
-
-/* Background image */
-.bg{
-  position:fixed;inset:0;z-index:-3;overflow:hidden;
-}
-.bg img{
-  position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;
-  transition:opacity 0.5s ease;
-  opacity:0;
-}
-.bg img.active{opacity:1;}
-
-/* Corner overlay */
-body::after{
-  content:'';
-  position:fixed;top:0;left:0;width:100%;height:100%;
-  background:radial-gradient(circle at top left, rgba(0,0,0,0.2), transparent 70%);
-  pointer-events:none;
-  z-index:1;
-}
-
-/* Card panel */
-.card{
-  width:100%;
-  max-width:900px;
-  border-radius:20px;
-  background: rgba(255,255,255,0.06); /* minimal transparent glass */
-  padding:30px;
-  display:flex;
-  flex-direction:column;
-  gap:16px;
-  backdrop-filter: blur(8px) saturate(110%);
-  color:black;
-  position:relative;
-  overflow:hidden;
-  box-shadow:0 8px 20px rgba(0,0,0,0.15);
-}
-
-/* Brand & panel */
-.brand{display:flex;gap:12px;align-items:center}
-.logo{width:72px;height:72px;border-radius:16px;background:rgba(255,255,255,0.1);display:flex;align-items:center;justify-content:center;color:black;font-weight:800;font-size:28px;box-shadow:0 6px 15px rgba(0,0,0,0.1)}
-h1{margin:0;font-size:24px;color:black;}
-p.lead{margin:0;color:#333;font-size:15px;}
-
-.form{display:flex;flex-direction:column;gap:12px;margin-top:6px}
-.filebtn,input[type="text"],.primary-btn,.muted-btn{
-  padding:14px;border-radius:14px;border:1px solid rgba(0,0,0,0.15);font-size:15px;
-  cursor:pointer;
-  color:black;
-  background:rgba(255,255,255,0.05);
-  text-align:center;
-}
-input[type="text"]{box-shadow:none;}
-.primary-btn, .muted-btn{border:1px solid rgba(0,0,0,0.15); background:rgba(255,255,255,0.05);}
-.primary-btn:hover, .muted-btn:hover, .filebtn:hover{background:rgba(255,255,255,0.1);}
-
-/* Status & logs */
-.status-panel, .logs-panel{
-  background: rgba(255,255,255,0.05);
-  padding:14px;border-radius:16px;border:1px solid rgba(0,0,0,0.05);
-  color:black;
-}
-.status{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px}
-.status .left{display:flex;gap:12px;align-items:center}
-.dot{width:12px;height:12px;border-radius:50%;background:#ff7b7b;}
-.dot.running{background:#2fe08a;}
-.meta{font-size:13px;color:black;}
-.owner{font-weight:700;color:black;}
-.logs-box{height:220px;overflow:auto;padding:8px;border-radius:12px;background:rgba(255,255,255,0.05);color:black;}
-@media (max-width:480px){.logs-box{height:160px}}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jerry Bot Panel</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1><i class="fas fa-robot"></i> Jerry Bot Panel</h1>
+            <div class="status" id="statusIndicator">
+                <span class="status-dot"></span>
+                <span class="status-text">Checking...</span>
+            </div>
+        </header>
 
-<div class="bg" id="bg"><img id="bgImg"/></div>
+        <div class="panel">
+            <!-- Configuration Section -->
+            <div class="section">
+                <h2><i class="fas fa-cog"></i> Bot Configuration</h2>
+                
+                <div class="config-form">
+                    <div class="input-group">
+                        <label for="appStateFile">
+                            <i class="fas fa-file-upload"></i> AppState File
+                        </label>
+                        <input type="file" id="appStateFile" accept=".txt,.json">
+                        <small>Upload your appstate.txt file</small>
+                    </div>
 
-<div class="card" id="mainCard">
-  <div class="brand">
-    <div class="logo">J</div>
-    <div>
-      <h1>Jerry Bot Panel</h1>
-      <p class="lead">Mobile friendly • Glassy UI</p>
+                    <div class="input-group">
+                        <label for="ownerUID">
+                            <i class="fas fa-user-shield"></i> Admin UID
+                        </label>
+                        <input type="text" id="ownerUID" placeholder="Enter your Facebook UID">
+                        <small>Your Facebook user ID (numbers only)</small>
+                    </div>
+
+                    <div class="button-group">
+                        <button id="startBtn" class="btn btn-primary">
+                            <i class="fas fa-play"></i> Start Bot
+                        </button>
+                        <button id="stopBtn" class="btn btn-danger" disabled>
+                            <i class="fas fa-stop"></i> Stop Bot
+                        </button>
+                        <button id="clearBtn" class="btn btn-warning">
+                            <i class="fas fa-trash"></i> Clear Config
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Status Section -->
+            <div class="section">
+                <h2><i class="fas fa-info-circle"></i> Bot Status</h2>
+                <div class="status-info">
+                    <div class="status-item">
+                        <span class="label">Status:</span>
+                        <span id="botStatus" class="value">Unknown</span>
+                    </div>
+                    <div class="status-item">
+                        <span class="label">Admin UID:</span>
+                        <span id="adminUID" class="value">Not set</span>
+                    </div>
+                    <div class="status-item">
+                        <span class="label">Last Started:</span>
+                        <span id="lastStarted" class="value">Never</span>
+                    </div>
+                    <div class="status-item">
+                        <span class="label">Memory Usage:</span>
+                        <span id="memoryUsage" class="value">0 MB</span>
+                    </div>
+                    <div class="status-item">
+                        <span class="label">Uptime:</span>
+                        <span id="uptime" class="value">0s</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Quick Commands -->
+            <div class="section">
+                <h2><i class="fas fa-terminal"></i> Available Commands</h2>
+                <div class="commands-list">
+                    <div class="command-item">
+                        <code>.help</code> - Show all commands
+                    </div>
+                    <div class="command-item">
+                        <code>.gclock [name]</code> - Lock group name
+                    </div>
+                    <div class="command-item">
+                        <code>.lockemoji 😀</code> - Lock group emoji
+                    </div>
+                    <div class="command-item">
+                        <code>.lockdp</code> - Lock group profile picture
+                    </div>
+                    <div class="command-item">
+                        <code>.locknick @mention nick</code> - Lock user nickname
+                    </div>
+                    <div class="command-item">
+                        <code>.allname [nick]</code> - Change all nicknames
+                    </div>
+                    <div class="command-item">
+                        <code>.memory</code> - Check memory usage
+                    </div>
+                    <div class="command-item">
+                        <code>.clean</code> - Clean memory
+                    </div>
+                </div>
+            </div>
+
+            <!-- Logs Section -->
+            <div class="section">
+                <h2><i class="fas fa-scroll"></i> System Logs</h2>
+                <div class="logs-container">
+                    <div id="logs" class="logs">
+                        <div class="log-entry">Panel started successfully</div>
+                    </div>
+                    <button id="clearLogs" class="btn btn-small">
+                        <i class="fas fa-broom"></i> Clear Logs
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Notification System -->
+        <div id="notification" class="notification hidden">
+            <span id="notificationText"></span>
+            <button onclick="hideNotification()">×</button>
+        </div>
     </div>
-  </div>
 
-  <form id="startForm" class="form" autocomplete="off">
-    <label class="filebtn" for="appstateInput">Choose appstate.json</label>
-    <input id="appstateInput" name="appstate" type="file" accept=".json" style="display:none" required />
-
-    <input id="ownerInput" class="text" name="owner" type="text" placeholder="Owner UID" required />
-
-    <label class="filebtn" for="bgUpload">Choose Background Image</label>
-    <input type="file" id="bgUpload" accept="image/*" style="display:none"/>
-
-    <div style="display:flex;gap:8px;margin-top:8px">
-      <button class="primary-btn" type="submit">🚀 Start Bot</button>
-      <button class="muted-btn" type="button" id="stopBtn">🛑 Stop Bot</button>
-    </div>
-  </form>
-
-  <div class="status-panel status">
-    <div class="left">
-      <div class="dot" id="statusDot"></div>
-      <div>
-        <div class="owner" id="ownerLabel">Owner: -</div>
-        <div class="meta" id="statusLine">Status: Stopped</div>
-      </div>
-    </div>
-    <div style="text-align:right">
-      <div class="small">Uptime</div>
-      <div id="uptime" style="font-weight:700">-</div>
-    </div>
-  </div>
-
-  <div class="logs-panel">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:6px">
-      <div style="font-weight:700">Logs</div>
-      <div class="small">Live</div>
-    </div>
-    <div class="logs-box" id="logsBox"></div>
-  </div>
-</div>
-
-<script>
-const logsBox=document.getElementById("logsBox");
-let logs=[];
-function addLog(msg){ logs.unshift(`[${new Date().toLocaleTimeString()}] ${msg}`); if(logs.length>200) logs=logs.slice(0,200); renderLogs(); }
-function renderLogs(){ logsBox.innerHTML=logs.map(l=>`<div style="padding:6px;border-bottom:1px solid rgba(0,0,0,0.03);font-size:13px">${l}</div>`).join(''); }
-
-// Background upload
-const bgUpload=document.getElementById("bgUpload");
-const bgImg=document.getElementById("bgImg");
-const body=document.body;
-bgUpload.addEventListener("change",e=>{
-  const file=e.target.files[0];
-  if(file){
-    const reader=new FileReader();
-    reader.onload=()=>{
-      bgImg.src=reader.result; 
-      bgImg.classList.add("active"); 
-      body.style.background="none"; // remove default pink
-    }
-    reader.readAsDataURL(file);
-  }
-});
-
-document.getElementById('startForm').addEventListener('submit',e=>{ e.preventDefault(); addLog("Starting bot..."); });
-document.getElementById('stopBtn').addEventListener('click',()=>addLog("Stopping bot..."));
-</script>
+    <script src="script.js"></script>
 </body>
 </html>
